--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6905,4 +6905,14 @@ url = {http://link.springer.com/10.1007/978-3-642-41086-4},
 volume = {91},
 year = {2014}
 }
-
+@article{Lowdin1951,
+abstract = {The solution of the quantum-mechanical eigenvalue problem is discussed for cases when a series of approximate eigenfunctions is known. If these "unperturbed" states are divided into two classes, a perturbation formula is derived giving the influence of one class of states on the other in the final solution: The formula contains as special cases: (i) the Schr{\"{o}}dinger-Brillouin formula for the eigenvalue of a nondegenerate state, (ii) a new simple formula for treating a class of degenerate states, and (iii) the splitting of the secular equation in cases where the system naturally consists of two independent parts in mutual interaction.},
+author = {L{\"{o}}wdin, Per Olov},
+url = {https://dx.doi.org/10.1063/1.1748067},
+journal = {J. Chem. Phys.},
+number = {11},
+pages = {1396--1401},
+title = {{A note on the quantum-mechanical perturbation theory}},
+volume = {19},
+year = {1951}
+}
